index.css
/* ... */
@media (min-width: 45rem) {
    .destination {
        background-image: url(./assets/destination/background-destination-desktop.jpg);
    }
} 

/* crew */
.crew {
    background-image: url(./assets/home/background-crew-mobile.jpg);
}

@media (min-width: 35rem) {
    .crew {
        background-position: center center;
        background-image: url(./assets/crew/background-crew-tablet.jpg);
    }
}

@media (min-width: 45rem) {
    .crew {
        background-image: url(./assets/crew/background-crew-desktop.jpg);
    }
} 

/* ----------------------------- */
/* Layout                        */
/* ----------------------------- */


.grid-container {
    text-align: center;
    display: grid;
    place-items: center;
    padding-inline: 1rem;
    padding-bottom: 4rem;
}

.grid-container p:not([class]) {
    max-width: 50ch;
}

.numbered-title {
    grid-area: title;
}

/* destination layout */

.grid-container--destination {
    --flow-space: 2rem;
    grid-template-areas: 
        'title'
        'image'
        'tabs'
        'content';
}

.grid-container--destination > picture {
    grid-area: image;
    max-width: 60%;
    align-self: start;
}

.grid-container--destination > .tab-list {
    grid-area: tabs;
}

.grid-container--destination > .destination-info {
    grid-area: content;
}

.destination-meta {
    flex-direction: column;
    border-top: 1px solid hsl( var(--clr-white) / .1);
    padding-top: 2.5rem;
    margin-top: 2.5rem;
}

.destination-meta p {
    font-size: 1.75rem;
}

/* crew layout */

.grid-container--crew {
    --flow-space: 2rem;
    grid-template-areas: 
        'title'
        'image'
        'tabs'
        'content';
}

.grid-container--crew > picture {
    grid-area: image;
    max-width: 60%;
    border-bottom: 1px solid hsl( var(--clr-white) / .1);
}

.grid-container--crew > .dot-indicators {
    grid-area: tabs;
}

.grid-container--crew > .crew-details {
    grid-area: content;
}

.crew-details h2 {
    color: hsl( var(--clr-white) / .5);
}

@media (min-width: 35em) {
    .numbered-title {
        justify-self: start;
        margin-top: 2rem;
    }
    
    .destination-meta {
        flex-direction: row;
        justify-content: space-evenly;
    }
    
    .grid-container--crew {
        padding-bottom: 0;
        grid-template-areas: 
            'title'
            'content'
            'tabs'
            'image';
    }
    
    
}

@media (min-width: 45em) {
    .grid-container {
        text-align: left;
        column-gap: var(--container-gap, 2rem);
        grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(1rem, 1fr);
    }
    
    .grid-container--home {
        padding-bottom: max(6rem, 20vh);
        align-items: end;
    }
    
    .grid-container--home > *:first-child {
        grid-column: 2;
    }

    .grid-container--home > *:last-child {
        grid-column: 3;
    }
    
    .grid-container--destination {
        justify-items: start;
        align-content: start;
        grid-template-areas: 
            '. title title .'
            '. image tabs .'
            '. image content .';
    }
    
    .grid-container--destination > picture {
        max-width: 90%;
    }
     
    .destination-meta {
        --gap: min(6vw, 6rem);
        justify-content: start;
    }
    
    .grid-container--crew {
        grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(1rem, 1fr);
        justify-items: start;
        grid-template-areas: 
            '. title title .'
            '. content image .'
            '. tabs image .';
    }
    
    .grid-container--crew > picture {
        grid-column: span 2;
        align-self: end; 
        max-width: 90%;
    }

}

